# obsidian

./: .gitignore  .gitmodules  Cargo.toml  README.md
contracts/: Makefile  remappings.txt
contracts/script/: DeployObsidianRouter.s.sol
contracts/src/: ObsidianRouter.sol
contracts/test/: Obsidian.t.sol
frontend/: README.md  index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  index.html
frontend/src/components/: TradeCard.tsx  TradingChart.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/config/: wagmiConfig.ts
frontend/src/hooks/: useObsidianTrade.ts  useWethPrice.ts
frontend/src/pages/: Index.tsx
frontend/src/services/: relayer.ts
frontend/src/types/: obsidian.ts
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/decoder/: mod.rs
lib/src/header/: mod.rs
lib/src/states/: mod.rs
lib/src/swapper/: mod.rs
lib/src/verifier/: mod.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
server/: Cargo.toml  build.rs
server/src/: lib.rs  main.rs  order_processor.rs  prover.rs  router.rs  server.rs
