[package]
name = "obsidian-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
tiny-keccak = { version = "2.0", features = ["sha3","keccak"] }
alloy-primitives = "0.8.23"
serde = "1.0.219"


[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", package = "tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
