[package]
version = "0.1.0"
name = "obsidian-script"
edition = "2021"
default-run = "obsidian"

[[bin]]
name = "obsidian"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "4.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
obsidian-lib = { path = "../lib" }
dotenv = "0.15.0"
alloy = "0.12.5"
tokio = "1.44.1"
alloy-rlp = "0.3.11"
alloy-primitives = "0.8.23"
bincode = "1.3.3"

[build-dependencies]
sp1-build = "4.0.0"
