[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "obsidian-server"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
alloy-primitives = "0.8.23"
anyhow = "1.0.97"
dotenv = "0.15.0"
env_logger = "0.11.7"
futures = "0.3.31"
log = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.44.1"
tracing = "0.1.41"
tracing-actix-web = "0.7.16"
tracing-subscriber = "0.3.19"
