[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run="server"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "prover"
path = "src/bin/prover.rs"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
alloy = "0.12.6"
alloy-primitives = "0.8.23"
alloy-provider = "0.12.6"
anyhow = "1.0.97"
dotenv = "0.15.0"
env_logger = "0.11.7"
futures = "0.3.31"
log = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
sp1-sdk = "4.1.3"
tokio = "1.44.1"
tracing = "0.1.41"
tracing-actix-web = "0.7.16"
tracing-subscriber = "0.3.19"
obsidian-lib = { path = "../lib" }
bincode = "1.3.3"
sp1-build = "4.0.0"

[build-dependencies]
sp1-build = "4.0.0"


